--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,4 +1,7 @@
 pipeline:
   agent:
-    node:
-      label: 'label'
+    any:
+  stages:
+    - stage: Stage
+      steps:
+        - echo "test-output-${env.BRANCH_NAME}"
