--- a/jenkins.yml
+++ b/jenkins.yml
@@ -10,6 +10,6 @@ pipeline:
     - stage: "terraform Init"
       steps:
         - sh 'terraform init > tfflogs.txt 2>&1 &'
-    - stage: "tf action"
+    - stage: "tf plan"
       steps:
-        - echo "Terraform action is –> ${action}”"
+        - sh 'terraform plan'
