added checkout stage

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -7,6 +7,9 @@ pipeline:
         token: "unique-token-to-start-the-current-pipeline"
 
   stages:
+    - stage: "checkout"
+      steps:
+        - checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/prayas2409/jenkinsPipelineYaml.git' ]]])
     - stage: "terraform Init"
       steps:
         - sh 'terraform init > tfflogs.txt 2>&1 &'
