--- a/jenkins.yml
+++ b/jenkins.yml
@@ -9,7 +9,7 @@ pipeline:
   stages:
     - stage: "checkout"
       steps:
-        - checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/prayas2409/jenkinsPipelineYaml.git' ]]])
+        - sh 'checkout([$class: "GitSCM", branches: [[name: "*/master"]], extensions: [], userRemoteConfigs: [[url: "https://github.com/prayas2409/jenkinsPipelineYaml.git" ]]])'
     - stage: "terraform Init"
       steps:
         - sh 'terraform init > tfflogs.txt 2>&1 &'
