--- a/jenkins.yml
+++ b/jenkins.yml
@@ -12,6 +12,9 @@ pipeline:
     #       script: if fileExists('jenkinsPipelineYaml') { git clone https://github.com/prayas2409/jenkinsPipelineYaml.git }
     - stage: "terraform Init"
       steps:
+        - sh 'git clone https://github.com/prayas2409/jenkinsPipelineYaml.git'
+    - stage: "terraform Init"
+      steps:
         - sh 'cd jenkinsPipelineYaml && terraform init'
     - stage: "tf plan"
       steps:
